fix; text readable

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,27 @@
+p {
+    color:gray;
+    
+}
+
 h1 {
     font-family: 'Montserrat', sans-serif;
     color:blue;
     
 }
 
+h2 {
+    color:gray;
+    
+}
+
 h3 {
     font-family: 'Roboto Condensed', sans-serif;
     color:green;
+    
+}
+
+h4 {
+    color:gray;
     
 }
 
@@ -17,11 +32,18 @@ body {
     
 }
 
-.center {
+.centerP {
     margin:auto;
     border:3px solid black;
     width:50%;
     padding:10px;
     
+    
+}
+
+.centerH {
+    margin:auto;
+    width:50%;
+    padding:10px;
     
 }
